--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
       // camera.rotation.y = (45 / 180) * Math.PI;
       // camera.rotation.y = 90;
 
-
       cx = -1.9498406604410485;
       cy = -0.6379588020740629;
       cz = -2.1602703660266753;
 
       camera.position.x = 0;
-      camera.position.y = -1600;
+      camera.position.y = -2000;
       camera.position.z = 0;
       renderer = new THREE.WebGLRenderer({ antialias: true });
       renderer.setSize(window.innerWidth, window.innerHeight);
@@ -85,38 +84,25 @@
       l1.add(directionalLight.position, "z", -10000, 10000, 1);
 
       let loader = new THREE.GLTFLoader();
-      loader.load("./models/scene2.glb", function (gltf) {
+      loader.load("./models/scene3.glb", function (gltf) {
         smartp1 = gltf.scene.children[0];
         smartp1.position.set(0, -200.0, 0);
         smartp1.rotation.set(0, 0, 0);
         smartp1.scale.set(50, 50, 50);
         // smartp1.rotation.set(1.2, -3.3, -0.5);
         scene.add(gltf.scene);
-        cam1.add(camera.rotation, "x", -1000, 1000, 1);
-        cam1.add(camera.rotation, "y", -1000, 1000, 1);
-        cam1.add(camera.rotation, "z", -1000, 1000, 1);
-        cam1.add(camera.position, "x", -100, 100, 1);
-        // cam1.add(camera.position, "y", -100, 100, 1);
-        cam1.add(camera.position, "z", -1000, 1000, 1);
-        animate();
-      });
 
-      loader.load("./smartphone2/scene.gltf", function (gltf) {
-        var model = gltf.scene;
-        var newMaterial = new THREE.MeshStandardMaterial({ color: 0xff0000 });
-        model.traverse((o) => {
-          if (o.isMesh) o.material = newMaterial;
-        });
 
-        smartp2 = gltf.scene.children[0];
-        smartp2.position.set(0, 0, 0);
-        smartp2.scale.set(200, 200, 200);
-        smartp2.visible = false;
-        scene.add(gltf.scene);
+        cam1.add(camera.position, "x", -1000, 1000, 0.1);
+        cam1.add(camera.position, "y", -1000, 1000, 0.1);
+        cam1.add(camera.position, "z", -1000, 1000, 0.1);
+        cam1.add(camera.rotation, "x", -10, 10, 0.05);
+        cam1.add(camera.rotation, "y", -10, 10, 0.05);
+        cam1.add(camera.rotation, "z", -10, 10, 0.05);
 
-        cam2.add(smartp2.rotation, "x", -10, 10, 0.1);
-        cam2.add(smartp2.rotation, "y", -10, 10, 0.1);
-        cam2.add(smartp2.rotation, "z", -10, 10, 0.1);
+
+        camera.rotation.z = -3.15;
+
         animate();
       });
 
@@ -134,8 +120,14 @@
         .querySelector("#changeBtn")
         .addEventListener("click", changeModel);
 
+      var clock = new THREE.Clock();
+      var angle = 0;
+      var angularSpeed = THREE.Math.degToRad(1/100); // градусов в секунду
+      var delta = 1;
+      var radius = 0.002;
 
       function animate(ob) {
+        // delta = clock.getDelta();
         // camera.rotation.x = camera.rotation.x + 0.05;
         // smartp1.rotation.z = smartp1.rotation.z + 0.05;
         // if (
@@ -148,19 +140,17 @@
         //   smartp2.rotation.z += 0.1;
         // }
 
-        delta = clock.getElapsedTime(); // getDelta() - возвращает интервал в долях секунды
+        // delta = clock.getElapsedTime(); // getDelta() - возвращает интервал в долях секунды
 
-        // console.log(delta);
         requestAnimationFrame(animate);
 
-        // console.log(delta);
-        // camera.position.z = cz + delta * 100;
-        // camera.position.x = cx + delta * 100;
+        camera.position.x = Math.cos(angle) * 1000;
+        camera.position.z = Math.sin(angle) * 1000;
+        camera.position.y = (Math.sin(angle)/2)* 4000;
 
-        angle += angularSpeed * delta; // приращение угла
+        angle += 0.005; // приращение угла
 
-        // camera.lookAt(1, 1, 1);
-
+        camera.lookAt(smartp1.position);
 
         renderer.render(scene, camera);
       }
